infra/base/coreapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smarterp-coreapp
  namespace: smarterp
  labels:
    app: smarterp-coreapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smarterp-coreapp
  template:
    metadata:
      labels:
        app: smarterp-coreapp
    spec:
      containers:
        - name: smarterp-coreapp
          image: smarterp/smarterp-coreapp:1.0.0
          ports:
            - containerPort: 8080
              name: http
