infra/base/coreapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smarterp-coreapp
  namespace: smarterp
  labels:
    app: smarterp-coreapp
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: smarterp-coreapp
